[gd_scene load_steps=6 format=3 uid="uid://cf80eopg2mq4b"]

[ext_resource type="Script" uid="uid://dovfglkqe42dc" path="res://scenes/chars/black_squirrel/black_squirrel.gd" id="1_xq2u2"]
[ext_resource type="Texture2D" uid="uid://cnk7me4eiqfur" path="res://assets/chars/black_squirrel/black_squirrel.png" id="2_xq2u2"]
[ext_resource type="AudioStream" uid="uid://btrfgbku3b2rc" path="res://assets/chars/gray_squirrel/hurt.wav" id="3_j7a3x"]
[ext_resource type="PackedScene" uid="uid://cnaw4xrujfib0" path="res://scenes/items/ball.tscn" id="4_144ml"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewhgx"]
size = Vector2(118, 218)

[node name="BlackSquirrel" type="CharacterBody2D"]
script = ExtResource("1_xq2u2")

[node name="BlackSquirrel" type="Sprite2D" parent="."]
texture = ExtResource("2_xq2u2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemies"]]
position = Vector2(0, -52)
shape = SubResource("RectangleShape2D_ewhgx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_j7a3x")

[node name="RightRay" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)
collision_mask = 2

[node name="LeftRay" type="RayCast2D" parent="."]
target_position = Vector2(-100, 0)
collision_mask = 2

[node name="Timer" type="Timer" parent="."]

[node name="Ball" parent="." instance=ExtResource("4_144ml")]
visible = false
position = Vector2(0, 23)
monitoring = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
